--- a/pages/teamentry.html
+++ b/pages/teamentry.html
@@ -82,6 +82,7 @@
 </header>
 <main>
     <div class="container">
+
         <div class="employee">
             <div class="employee__photo">
                 <img src="../images/team/Team-5.svg" alt="photo">
@@ -91,10 +92,10 @@
                 <p>Equity partner, Attorney-at-law</p>
                 <p><a href="#">kobzar@forstudy.space</a></p>
                 <p><a href="#">LinkedIn profile</a></p>
-                <hr>
             </div>
         </div>
-        <div class="=bio">
+        <div class="bio">
+            <hr>
             <p>Oksana heads the practice of international trade and shipping. He specializes in resolving disputes
                 related
                 to the purchase and sale of raw materials and transportation of goods by sea.<br>
@@ -113,6 +114,7 @@
                 CCI of
                 Ukraine</p>
         </div>
+
     </div>
 
 </main>
